--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,8 @@ header {
             color: #0097A7; }
           header nav ul li a:after {
             text-decoration: none; }
+    header nav ul.burger {
+      display: none; }
     header nav h3 {
       margin: 0 !important;
       border: 1px solid #898989;
@@ -71,9 +73,7 @@ header {
   #servicios .box-servicios {
     display: flex;
     flex-wrap: wrap;
-    width: 80%;
-    justify-content: space-between;
-    margin: auto; }
+    justify-content: space-between; }
     #servicios .box-servicios article {
       box-shadow: 0 8px 6px -6px #7d7c7c;
       border: 1px solid #eaeaea;
@@ -81,7 +81,8 @@ header {
       width: 250px;
       padding-right: 10px;
       padding-left: 10px;
-      margin-bottom: 20px; }
+      margin-bottom: 20px;
+      margin: 0px 5px 23px 5px; }
       #servicios .box-servicios article .box-interior {
         padding: 49px 0px 32px; }
         #servicios .box-servicios article .box-interior .service-icon {
@@ -269,7 +270,8 @@ footer {
     text-align: center;
     margin: 20px 5px; }
     footer .contenedor .menu-footer ul {
-      display: inline-block; }
+      display: inline-block;
+      padding-left: 0px; }
       footer .contenedor .menu-footer ul li {
         display: inline-block;
         margin: 0px 8px; }
@@ -300,5 +302,39 @@ footer {
     color: black;
     font-family: "Dosis", sans-serif;
     border-color: #444; }
+
+@media screen and (max-width: 1190px) {
+  header {
+    height: auto; } }
+@media screen and (max-width: 800px) {
+  header {
+    height: auto; }
+
+  .carousel-caption h1 {
+    font-size: 22px; } }
+@media screen and (max-width: 580px) {
+  #servicios .box-servicios {
+    justify-content: center;
+    width: 100%; } }
+@media screen and (min-width: 250px) and (max-width: 450px) {
+  .carousel-caption {
+    bottom: -60px; }
+    .carousel-caption h1 {
+      font-size: 17px; } }
+@media screen and (max-width: 605px) {
+  header nav ul {
+    -webkit-padding-start: 2px; }
+    header nav ul li {
+      padding: 0px 5px 0px 4px; }
+      header nav ul li a {
+        font-size: 11px; }
+  header nav h3 {
+    margin: 0 !important;
+    border: 1px solid #898989;
+    border-radius: 3px;
+    padding: 2px 5px;
+    text-transform: uppercase;
+    font-size: 12px;
+    color: #FF5252; } }
 
 /*# sourceMappingURL=style.css.map */
