--- a/sass/style.scss
+++ b/sass/style.scss
@@ -26,26 +26,29 @@ header{
             display: flex;
             margin: 0 !important;
             margin-right: 60px;
-            li{
-            padding:0px 20px 0px 4px;
-            text-transform: uppercase;
-            list-style-type: none;
-                a{
-                text-decoration: none; 
-                color:white;
-                font-family: $open-sans;
-                font-weight: 400;               
-                    &:hover{
-                        text-decoration: none;
-                       border-bottom: 1px solid black;
-                       color:$primary-color-dark;
-                    }
-                    &:after{
-                        text-decoration: none;
+                li{
+                padding:0px 20px 0px 4px;
+                text-transform: uppercase;
+                list-style-type: none;
+                    a{
+                    text-decoration: none; 
+                    color:white;
+                    font-family: $open-sans;
+                    font-weight: 400;               
+                        &:hover{
+                            text-decoration: none;
+                        border-bottom: 1px solid black;
+                        color:$primary-color-dark;
+                        }
+                        &:after{
+                            text-decoration: none;
+                        }
                     }
                 }
             }
-        } 
+            ul.burger{
+                display: none;
+            } 
         h3{
             margin: 0 !important;
             border: 1px solid #898989;
@@ -93,9 +96,7 @@ header{
     .box-servicios {
         display: flex;
         flex-wrap: wrap;
-        width:80%;
         justify-content: space-between;
-        margin: auto;
         article{
             box-shadow: 0 8px 6px -6px #7d7c7c;
             border: 1px solid #eaeaea;
@@ -104,6 +105,7 @@ header{
             padding-right: 10px;
             padding-left: 10px;
             margin-bottom: 20px;
+            margin: 0px 5px 23px 5px;
             .box-interior{
                 padding: 49px 0px 32px;
                     .service-icon{
@@ -352,6 +354,7 @@ footer{
             margin: 20px 5px;
             ul{
                 display: inline-block;
+                padding-left: 0px;
                 li{
                     display: inline-block;
                     margin: 0px 8px;
@@ -395,4 +398,63 @@ footer{
         border-color: #444;
     }
     
+}
+
+@media screen and (max-width:1190px){
+    header{
+        height: auto;
+    }
+}
+
+@media screen and (max-width:800px){
+    header{
+        height: auto;
+    }
+    .carousel-caption {
+        h1{
+            font-size: 22px;
+        }
+    }
+}
+
+@media screen and (max-width:580px){
+    #servicios{
+        .box-servicios{
+            justify-content: center;
+            width: 100%;
+        }
+    }
+}
+
+@media screen and (min-width:250px) and (max-width:450px){
+    .carousel-caption {
+        bottom: -60px;
+        h1{
+            font-size: 17px;
+        }
+    }
+}
+
+@media screen and (max-width:605px){
+    header nav{
+        ul {
+            -webkit-padding-start: 2px;
+            li{
+                padding: 0px 5px 0px 4px;
+                a{
+                    font-size: 11px;
+                }
+            }
+        }
+        h3{
+            margin: 0 !important;
+            border: 1px solid #898989;
+            border-radius: 3px;
+            padding: 2px 5px;
+            text-transform: uppercase;
+            font-size: 12px;
+            color: #FF5252;
+        }
+     
+    }
 }
