--- a/sass/style.scss
+++ b/sass/style.scss
@@ -46,9 +46,6 @@ header{
                     }
                 }
             }
-            ul.burger{
-                display: none;
-            } 
         h3{
             margin: 0 !important;
             border: 1px solid #898989;
@@ -57,6 +54,9 @@ header{
             text-transform: uppercase;
             font-size: 16px;
             color:$accent-color;
+        }
+        h3.mini-logo{
+            display: none;
         }
     }
 }
@@ -436,7 +436,7 @@ footer{
 }
 
 @media screen and (max-width:605px){
-    header nav{
+    header {nav{
         ul {
             -webkit-padding-start: 2px;
             li{
@@ -446,15 +446,12 @@ footer{
                 }
             }
         }
-        h3{
-            margin: 0 !important;
-            border: 1px solid #898989;
-            border-radius: 3px;
-            padding: 2px 5px;
-            text-transform: uppercase;
-            font-size: 12px;
-            color: #FF5252;
+        h3.logo{
+            display: none;
+        }
+        h3.mini-logo{
+            display: block;
         }
      
-    }
+    }}
 }
