--- a/sass/style.scss
+++ b/sass/style.scss
@@ -97,6 +97,8 @@ header{
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
+        width: 80%;
+        margin: auto;
         article{
             box-shadow: 0 8px 6px -6px #7d7c7c;
             border: 1px solid #eaeaea;
@@ -314,7 +316,23 @@ footer{
                 font-family: $dosis;
                 text-transform: uppercase;
                 font-weight: 500;
-            }       
+            }   
+            h3{
+                margin: 0 !important;
+                border: 1px solid #898989;
+                border-radius: 3px;
+                padding: 4px 10px;
+                text-transform: uppercase;
+                font-size: 16px;
+                color:$accent-color;
+            }  
+            .startstech{
+                margin: auto;
+                max-width: 150px;
+                margin-top: 5px;
+                margin-bottom: 10px;
+            } 
+           
         }
         .linea{
         &before, &:after{
@@ -351,7 +369,9 @@ footer{
         }
         .menu-footer{
             text-align: center;
-            margin: 20px 5px;
+            margin: auto;
+            margin-top: 10px;
+            width: 73%;
             ul{
                 display: inline-block;
                 padding-left: 0px;
@@ -422,6 +442,12 @@ footer{
         .box-servicios{
             justify-content: center;
             width: 100%;
+        }
+    }
+    .carousel-caption {
+        bottom: -60px;
+        h1{
+            font-size: 17px;
         }
     }
 }
